fix(ui): api reference design updates, spacing etc

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -291,16 +291,27 @@ html[data-theme='dark'] .DocSearch-Button-Key {
 .sl-elements {
   --fs-paragraph: 18px !important;
   --fs-code: 16px !important;
+  /* Reset padding for pre tags inside sl-elements */
   --ifm-pre-padding: 0;
   @apply !text-base;
 }
 
+/* Hides the `Production server` text in TryItPanel */
 .TryItPanel > .sl-panel__titlebar > div:last-child {
   @apply hidden;
 }
 
 .sl-elements .OperationParametersContent {
   max-height: max-content;
+}
+
+.sl-code-viewer__scroller {
+  max-height: initial !important;
+}
+
+/* Spacing between params */
+.sl-self-stretch.sl-border-light.sl-border-t {
+  @apply my-2;
 }
 
 /* Fixes API reference white border */
